Prevent overflow on cart

--- a/client/src/components/dialog.module.css
+++ b/client/src/components/dialog.module.css
@@ -39,6 +39,8 @@
 
 .contentWrapper {
   flex: 1;
+  overflow: auto;
+  margin-bottom: 8px;
 }
 
 .contentWrapper.noItems {
